--- a/MuscleMate/docs/Other-Evaluable-Docs/tco.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/tco.mdx
@@ -8,18 +8,19 @@ title: Total Cost Ownership (TCO)
 
 ## Historial de versiones
 
-| Versión | Fecha      | Autor                                        | Diferencia entre versiones                       |
-| ------- | ---------- | -------------------------------------------- | ------------------------------------------------ |
-| 1.0     | 2024-02-08 | González Marcos, Pedro y Dana Cabello, David | Versión inicial del documento                    |
-| 2.0     | 2024-02-09 | González Marcos, Pedro y Dana Cabello, David | Finalización del documento                       |
-| 3.0     | 2024-02-10 | González Marcos, Pedro                       | Corrección del documento                         |
-| 4.0     | 2024-02-15 | González Marcos, Pedro                       | Corrección del documento                         |
-| 5.0     | 2024-02-16 | González Marcos, Pedro                       | Corrección del documento                         |
-| 6.0     | 2024-02-22 | González Marcos, Pedro                       | Corrección del documento                         |
-| 7.0     | 2024-03-01 | González Marcos, Pedro                       | Corrección del documento                         |
-| 8.0     | 2024-04-01 | González Marcos, Pedro                       | Gráficas TCO y Cálculos                          |
-| 9.0     | 2024-04-01 | Juan Carlos Moreno Pérez                     | Agregados costes de SLA                          |
-| 10.0    | 2024-04-21 | González Marcos, Pedro                       | Reestructuración documento y añadir roles nuevos |
+| Versión | Fecha      | Autor                                        | Diferencia entre versiones                        |
+| ------- | ---------- | -------------------------------------------- | ------------------------------------------------- |
+| 1.0     | 2024-02-08 | González Marcos, Pedro y Dana Cabello, David | Versión inicial del documento                     |
+| 2.0     | 2024-02-09 | González Marcos, Pedro y Dana Cabello, David | Finalización del documento                        |
+| 3.0     | 2024-02-10 | González Marcos, Pedro                       | Corrección del documento                          |
+| 4.0     | 2024-02-15 | González Marcos, Pedro                       | Corrección del documento                          |
+| 5.0     | 2024-02-16 | González Marcos, Pedro                       | Corrección del documento                          |
+| 6.0     | 2024-02-22 | González Marcos, Pedro                       | Corrección del documento                          |
+| 7.0     | 2024-03-01 | González Marcos, Pedro                       | Corrección del documento                          |
+| 8.0     | 2024-04-01 | González Marcos, Pedro                       | Gráficas TCO y Cálculos                           |
+| 9.0     | 2024-04-01 | Juan Carlos Moreno Pérez                     | Agregados costes de SLA                           |
+| 10.0    | 2024-04-21 | González Marcos, Pedro                       | Reestructuración documento y añadir roles nuevos  |
+| 11.0    | 2024-04-29 | González Marcos, Pedro                       | Correción feedback recibido y gastos de marketing |
 
 ## Introducción
 
@@ -176,14 +177,40 @@ Sin embargo, el tamaño creciente de la aplicación influye en su despliegue en 
 debemos de cambiar de planes al llegar a los 20 gimnasios, en cuyo caso se pasaría al plan Web Dev, de 12€/mes, y al llegar a los 30, se deberá pasar
 al plan de 99€/mes.
 
+### Costes de marketing
+
+Vamos a contar con unos 20,000€ para realizar la campaña de marketing.
+
+Para los primeros 2 meses vamos a destinar 5000€ en anuncios en instagram
+para generar interés entre el público joven y los empresarios.
+Asumniendo que el CPM (Coste por mil impresiones) es de
+[5€](https://www.adrenalina.es/precio-publicidad-instagram-ads/) podemos generar
+1,000,000 de impresiones.
+
+A medio plazo y largo plazo vamos a invertir 10,000€ en crear contenido en nuestras
+redes sociales (X, Instagram y Youtube), por lo que reservamos un dinero para el coste de materiales
+licencias y editores de video. Queremos generar marca personal y que el usuario
+no solo se identifique con el producto, sino que tambien con el equipo detrás de
+MuscleMate.
+
+Con los 5000€ restantes vamos a contratar una empresa que se encarge de la dirección
+del arte, el logotipo y el sistema de diseño de la empresa. Para que nuestros clientes
+se sientan cómodos con la marca y retengamos a la mayor parte de nuestros usuarios por
+la estética y el prestigio de la marca.
+
+La amortización mensual de los costes de marketing es:
+
+Total: 20,000€ / (24 - 4 meses de desarrollo) = 1,000€/mes
+
 ### Costes totales
 
 Con todo, obtenemos que el coste total de operación mensual inicialmente es:
 
 - 4000€ Costes de personal
+- 1000€ Costes de marketing
 - 1,226€ Costes de infraestructura
 
-Total: **5,226 €/mes**
+Total: **6,226 €/mes**
 
 ## Evolución a lo largo del tiempo
 
