docs: update TCO with revised assumptions

--- a/MuscleMate/docs/Other-Evaluable-Docs/tco.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/tco.mdx
@@ -21,6 +21,7 @@ title: Total Cost Ownership (TCO)
 | 9.0     | 2024-04-01 | Juan Carlos Moreno Pérez                     | Agregados costes de SLA                           |
 | 10.0    | 2024-04-21 | González Marcos, Pedro                       | Reestructuración documento y añadir roles nuevos  |
 | 11.0    | 2024-04-29 | González Marcos, Pedro                       | Correción feedback recibido y gastos de marketing |
+| 12.0    | 2024-04-29 | Zarandieta Ortiz, David                      | Reinterpretación del TCO                          |
 
 ## Introducción
 
@@ -222,9 +223,9 @@ Para ver los beneficios y costes de la aplicación a largo plazo, tenemos en cue
   - Pesimista: Los costes mensuales son un 20% más altos que los esperados.
   - Hay que tener en cuenta que se sumarán los costes iniciales de desarrollo del proyecto.
 - Para los beneficios, asumiremos los siguientes 3 casos:
-  - Optimista: Cada mes, se suscriben al plan estándar 10 gimnasios y 4 al plan Prémium.
-  - Esperado: Cada mes, se suscriben al plan estándar 5 gimnasios y 2 al plan Prémium.
-  - Pesimista: Cada mes, se suscriben al plan estándar 3 gimnasios y 1 al plan Prémium.
+  - Optimista: Cada mes, se suscriben al plan estándar 10 gimnasios y 4 al plan Prémium y abandonan la suscripción un 1% de los gimnasios suscritos.
+  - Esperado: Cada mes, se suscriben al plan estándar 5 gimnasios y 2 al plan Prémium y abandonan la suscripción un 2% de los gimnasios suscritos.
+  - Pesimista: Cada mes, se suscriben al plan estándar 3 gimnasios y 1 al plan Prémium y y abandonan la suscripción un 4% de los gimnasios suscritos.
 
 Tenemos en cuenta que el plan estándar cuesta 97.99€ y el Prémium 109.99€ al mes.
 
