docs: update TCO with estimated gym subscription growth and stable earnings

--- a/MuscleMate/docs/Other-Evaluable-Docs/tco.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/tco.mdx
@@ -236,3 +236,6 @@ Realizando un estudio de 24 meses, obtenemos los siguientes datos, teniendo en c
 ![](/img/beneficios-vs-costes-medio.png)
 
 ![](/img/beneficios-vs-costes-largo.png)
+
+* Se estima que el número de gimnasios que ingresarían y el número de gimnasios que abandonarían la suscripción se equilibraría a los 98 meses (unos 8 años) y el crecimiento ya no sería creciente y se estancaría en 301 suscripciones, siendo un 71,42% de ellas "Estándar" (215 suscripciones)y el 28,58% "Premium" (86 suscripciones).
+Obteniendo así unas ganancias estables de 30,527€ al mes en bruto (sin tener en cuenta los costes). Todo esto está calculado para los beneficios esperados.
