Actualizar docuemntos de pilotos #177

--- a/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
+++ b/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
@@ -10,13 +10,17 @@ title: Pilot Users Performance Evaluation
 | v1.0    | 2024-04-01  | David Dana Cabello   | Creación del documento                 |
 | v2.0    | 2024-04-03  | Ángel Muñoz Prieto | Actualización con S2           |
 | v3.0    | 2024-04-22  | Ángel Muñoz Prieto | Actualización con S3           |
+| v4.0    | 2024-05-06 | Ángel Muñoz Prieto    |Actualización del documento para el PPL|
 
 
 ## PILOT USER ISSP GROUP NUMBER: 9
 
 | Factor            | #S1 | #S2 | #S3 | #PPL | #WPL |
 |-------------------|-----|-----|-----|------|------|
-| Punctuality       | 10  |  10 |    7|      |      |
-| Feedback validity | 8   |  10 |   10|      |      |
-| Feedback amount   | 8   |  10 |    8|      |      |
-| Communication     | 10  |   7 |    7|      |      |
+| Punctuality       | 10  |  10 |    7|     *|      |
+| Feedback validity | 8   |  10 |   10|     *|      |
+| Feedback amount   | 8   |  10 |    8|     *|      |
+| Communication     | 10  |   7 |    7|    10|      |
+
+* No se puntuan dichos apartados debido al acuerdo descrito en los otros documentos relacionados con el pilotaje, que aclaraba la no entrega de nuevo software 
+durante esta entrega para centrarse en el marketing y las redes sociales. De cara a la siguiente entrega si habrá pilotaje por parte de ambos equipos.
