doc: correcciones en el TCO

--- a/MuscleMate/docs/Other-Evaluable-Docs/tco.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/tco.mdx
@@ -124,12 +124,15 @@ En total, los costes mensuales son:
 - 220€ Costes de licencias y subscripciones
 - 312.5€ Activos de la empresa
 
-Total: **15.360.5€/mes**
+Total excepto los activos de la empresa: **15.048€/mes**
 
 Teniendo en cuenta que el desarrollo dura 4 meses. Con ello, obtenemos
-15.360.5 x 4 = 61.442€
+15.048 x 4 = 60.192€ a esto debemos sumarle los activos de la empresa que se pagan en 24 meses,
+312.5 x 24 = 7500€,
 
-El coste total de capital (Capex) es: **61.442€**
+Total con los activos de la empresa: 60.192€ + 7.500€ = 67.692€
+
+El coste total de capital (Capex) es: **67.692€**
 
 ## Costes de operación mensual (Opex)
 
@@ -177,6 +180,13 @@ Total: **1.226€/mes**
 Sin embargo, el tamaño creciente de la aplicación influye en su despliegue en PythonAnywhere. Suponiendo que cada gimnasio hace alrededor de 150 peticiones,
 debemos de cambiar de planes al llegar a los 20 gimnasios, en cuyo caso se pasaría al plan Web Dev, de 12€/mes, y al llegar a los 30, se deberá pasar
 al plan de 99€/mes.
+
+### Licencias de software
+
+- GitHub Team:= 4 miembros x 4€ = 16€/mes
+
+Total: **16€/mes**
+
 
 ### Costes de marketing
 
