fix: nuevas mejoras y correcciones

--- a/MuscleMate/docs/Other-Evaluable-Docs/tco.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/tco.mdx
@@ -85,10 +85,10 @@ Asumimos los siguientes costes para facilitar el espacio de trabajo de los desar
 
 - Alquiler de oficinas: 2.500€/mes
 - Luz: 648€/mes
-  - 0.18 €/kWh
+  - 0,18 €/kWh
   - 12 horas operativas
   - 10 kW contratados
-  - 0.18 x 12 x 10 x 30 = 648€/mes
+  - 0,18 x 12 x 10 x 30 = 648€/mes
 - Agua: 160€/mes
 
 Total: **3.308€/mes**
@@ -111,9 +111,9 @@ en 24 meses.
 
 Amortización lineal a 24 meses.
 
-7500€ / 24 meses = 312.5€
+7500€ / 24 meses = 312,5€
 
-Total: **312.5€/mes**
+Total: **312,5€/mes**
 
 ### Costes totales
 
@@ -122,13 +122,13 @@ En total, los costes mensuales son:
 - 11.520€ Costes de personal
 - 3.308€ Costes de infraestructura
 - 220€ Costes de licencias y subscripciones
-- 312.5€ Activos de la empresa
+- 312,5€ Activos de la empresa
 
 Total excepto los activos de la empresa: **15.048€/mes**
 
 Teniendo en cuenta que el desarrollo dura 4 meses. Con ello, obtenemos
 15.048 x 4 = 60.192€ a esto debemos sumarle los activos de la empresa que se pagan en 24 meses,
-312.5 x 24 = 7500€,
+312,5 x 24 = 7.500€,
 
 Total con los activos de la empresa: 60.192€ + 7.500€ = 67.692€
 
@@ -144,7 +144,7 @@ Como la aplicación ya está desarrollada, asumiremos que para mantenerla solo h
 - 320 x 1 x 2 = 640€
 - 320 x 1 x 2.5 = 800€
 - 320 x 2 x 1.5 = 960€
-- 320 x 2 x 2.5 = 1600€
+- 320 x 2 x 2.5 = 1.600€
 
 Con ello, los costes de personal ascienden a
 Total: **4.000€/mes**
@@ -158,34 +158,37 @@ Incurriendo en 400€ al mes
 
 - Alquiler de oficinas: 400€/mes
 - Luz: 648€/mes
-  - 0.18 €/Kwh
+  - 0,18 €/Kwh
   - 12 horas operativas
   - 10 Kw contratados
-  - 0.18 x 12 x 10 x 30 = 648€/mes
+  - 0,18 x 12 x 10 x 30 = 648€/mes
 - Agua: 160€/mes
 
-Subtotal: **1208€/mes**
+Total: **1.208€/mes**
 
-Además de los costes de la oficina, sumamos el del despliegue en AppEngine, del
+
+### Licencias de software
+
+- GitHub Team: 4 miembros x 4€ = 16€/mes
+
+Además del coste de GitHub Team, sumamos el del despliegue en AppEngine, del
 cual asumimos que trabajaría 12 horas al día, redondeando a unos 18€ al mes.
 ![](/img/appenginecosts.png)
+- AppEngine: 18€/mes
 
-Con PythonAnywhere, escogemos el plan Hacker, de 5€ al mes.
-
-1208 Costes de oficinas
-18 Costes de AppEngine
-
-Total: **1.226€/mes**
+- Con PythonAnywhere, escogemos el plan Hacker, de 5€ al mes.
 
 Sin embargo, el tamaño creciente de la aplicación influye en su despliegue en PythonAnywhere. Suponiendo que cada gimnasio hace alrededor de 150 peticiones,
 debemos de cambiar de planes al llegar a los 20 gimnasios, en cuyo caso se pasaría al plan Web Dev, de 12€/mes, y al llegar a los 30, se deberá pasar
 al plan de 99€/mes.
 
-### Licencias de software
+Total: **39€/mes**
 
-- GitHub Team:= 4 miembros x 4€ = 16€/mes
+Con PythonAnywhere, escogemos el plan Hacker, de 5€ al mes.
 
-Total: **16€/mes**
+Sin embargo, el tamaño creciente de la aplicación influye en su despliegue en PythonAnywhere. Suponiendo que cada gimnasio hace alrededor de 150 peticiones,
+debemos de cambiar de planes al llegar a los 20 gimnasios, en cuyo caso se pasaría al plan Web Dev, de 12€/mes, y al llegar a los 30, se deberá pasar
+al plan de 99€/mes.
 
 
 ### Costes de marketing
@@ -204,7 +207,7 @@ licencias y editores de video. Queremos generar marca personal y que el usuario
 no solo se identifique con el producto, sino que tambien con el equipo detrás de
 MuscleMate.
 
-Con los 5000€ restantes vamos a contratar una empresa que se encarge de la dirección
+Con los 5.000€ restantes vamos a contratar una empresa que se encarge de la dirección
 del arte, el logotipo y el sistema de diseño de la empresa. Para que nuestros clientes
 se sientan cómodos con la marca y retengamos a la mayor parte de nuestros usuarios por
 la estética y el prestigio de la marca.
@@ -217,8 +220,8 @@ Total: 20.000€ / (24 - 4 meses de desarrollo) = 1.000€/mes
 
 Con todo, obtenemos que el coste total de operación mensual inicialmente es:
 
-- 4000€ Costes de personal
-- 1000€ Costes de marketing
+- 4.000€ Costes de personal
+- 1.000€ Costes de marketing
 - 1.226€ Costes de infraestructura
 
 Total: **6.226 €/mes**
@@ -237,7 +240,7 @@ Para ver los beneficios y costes de la aplicación a largo plazo, tenemos en cue
   - Esperado: Cada mes, se suscriben al plan estándar 5 gimnasios y 2 al plan Prémium y abandonan la suscripción un 2% de los gimnasios suscritos.
   - Pesimista: Cada mes, se suscriben al plan estándar 3 gimnasios y 1 al plan Prémium y y abandonan la suscripción un 4% de los gimnasios suscritos.
 
-Tenemos en cuenta que el plan estándar cuesta 97.99€ y el Prémium 109.99€ al mes.
+Tenemos en cuenta que el plan estándar cuesta 97,99€ y el Prémium 109,99€ al mes.
 
 Realizando un estudio de 24 meses, obtenemos los siguientes datos, teniendo en cuenta los beneficios y gastos en cada mes:
 
@@ -248,4 +251,4 @@ Realizando un estudio de 24 meses, obtenemos los siguientes datos, teniendo en c
 ![](/img/beneficios-vs-costes-largo.png)
 
 * Se estima que el número de gimnasios que ingresarían y el número de gimnasios que abandonarían la suscripción se equilibraría a los 98 meses (unos 8 años) y el crecimiento ya no sería creciente y se estancaría en 301 suscripciones, siendo un 71,42% de ellas "Estándar" (215 suscripciones)y el 28,58% "Premium" (86 suscripciones).
-Obteniendo así unas ganancias estables de 30,527€ al mes en bruto (sin tener en cuenta los costes). Todo esto está calculado para los beneficios esperados.
+Obteniendo así unas ganancias estables de 30.527€ al mes en bruto (sin tener en cuenta los costes). Todo esto está calculado para los beneficios esperados.
