Cambiado "Sprint 3" por "PPL" en aquellos docs modificados

--- a/MuscleMate/docs/Other-Evaluable-Docs/investment_proposal.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/investment_proposal.mdx
@@ -4,13 +4,14 @@ title: Investment Proposal
 
 ![MUSCLEMATE](logo.png)
 
-## Musclemate, Grupo 3, Sprint 3
+## Musclemate, Grupo 3, PPL
 
 ## Historial de versiones
 
 | Versión | Fecha      | Autor                                        | Diferencia entre versiones                        |
 | ------- | ---------- | -------------------------------------------- | ------------------------------------------------- |
 | 1.0     | 2024-05-05 | González Marcos, Pedro y Dana Cabello, David | Versión inicial del documento                     |
+| 1.01    | 2024-05-06 | Alejandro Sosa Corral | Cambiado "Sprint 3" por "PPL"                     |
 
 
 ## Introducción
