--- a/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
+++ b/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
@@ -3,14 +3,15 @@ title: Pilot Users Performance Evaluation
 ---
 ![MUSCLEMATE](logo.png)
 
-## Musclemate, Grupo 3, Sprint 3
+## Musclemate, Grupo 3, PPL
 ##  Historial de Versiones
 | Versión | Fecha       | Autor      | Descripción                            |
 |---------|-------------|------------|----------------------------------------|
-| v1.0    | 2024-04-01  | David Dana Cabello   | Creación del documento                 |
+| v1.0    | 2024-04-01  | David Dana Cabello   | Creación del documento       |
 | v2.0    | 2024-04-03  | Ángel Muñoz Prieto | Actualización con S2           |
 | v3.0    | 2024-04-22  | Ángel Muñoz Prieto | Actualización con S3           |
 | v4.0    | 2024-05-06 | Ángel Muñoz Prieto    |Actualización del documento para el PPL|
+| v4.1    | 2024-05-06 | Alejandro Sosa Corral    |Cambiado "Sprint 3" por "PPL"|
 
 
 ## PILOT USER ISSP GROUP NUMBER: 9
