Actualizados documentos de pilotos

--- a/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
+++ b/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
@@ -12,16 +12,18 @@ title: Pilot Users Performance Evaluation
 | v3.0    | 2024-04-22  | Ángel Muñoz Prieto | Actualización con S3           |
 | v4.0    | 2024-05-06 | Ángel Muñoz Prieto    |Actualización del documento para el PPL|
 | v4.1    | 2024-05-06 | Alejandro Sosa Corral    |Cambiado "Sprint 3" por "PPL"|
+| v5.0    | 2024-05-20 | Ángel Muñoz Prieto    | Cierre del Documento | 
+
 
 
 ## PILOT USER ISSP GROUP NUMBER: 9
 
 | Factor            | #S1 | #S2 | #S3 | #PPL | #WPL |
 |-------------------|-----|-----|-----|------|------|
-| Punctuality       | 10  |  10 |    7|     *|      |
-| Feedback validity | 8   |  10 |   10|     *|      |
-| Feedback amount   | 8   |  10 |    8|     *|      |
-| Communication     | 10  |   7 |    7|    10|      |
+| Punctuality       | 10  |  10 |    7|     *|    10|
+| Feedback validity | 8   |  10 |   10|     *|    10|
+| Feedback amount   | 8   |  10 |    8|     *|    10|
+| Communication     | 10  |   7 |    7|    10|     9|
 
 * No se puntuan dichos apartados debido al acuerdo descrito en los otros documentos relacionados con el pilotaje, que aclaraba la no entrega de nuevo software 
 durante esta entrega para centrarse en el marketing y las redes sociales. De cara a la siguiente entrega si habrá pilotaje por parte de ambos equipos.
