--- a/MuscleMate/docs/Pilots/pilotUsersCommitmentAgreement anonymous people.mdx
+++ b/MuscleMate/docs/Pilots/pilotUsersCommitmentAgreement anonymous people.mdx
@@ -7,7 +7,7 @@ sidebar_position: 8
 # Pilot Users commitment Agreement group anonymous people
 ![MUSCLEMATE](logo.png)
 
-## Musclemate, Grupo 3, Sprint 2
+## Musclemate, Grupo 3, WPL
 ##  Historial de Versiones
 
 
