--- a/MuscleMate/docs/Pilots/pilotUsersCommitmentAgreement.mdx
+++ b/MuscleMate/docs/Pilots/pilotUsersCommitmentAgreement.mdx
@@ -7,7 +7,7 @@ sidebar_position: 8
 # Pilot Users commitment Agreement group 9
 ![MUSCLEMATE](logo.png)
 
-## Musclemate, Grupo 3, Sprint 2
+## Musclemate, Grupo 3, WPL
 ##  Historial de Versiones
 
 | Versión | Fecha       | Autor      | Descripción                            |
